// Copyright Â© 2016 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/TheThingsNetwork/ttn/api/api.proto";

package lorawan;

message DeviceIdentifier {
  bytes  app_eui  = 1 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  bytes  dev_eui  = 2 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  string app_id   = 3;
}

message Device {
  string app_id      = 1;
  bytes  app_eui     = 2 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppEUI"];
  bytes  dev_eui     = 3 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevEUI"];
  bytes  dev_addr    = 4 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.DevAddr"];
  bytes  nwk_s_key   = 5 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.NwkSKey"];
  bytes  app_s_key   = 6 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppSKey"];
  bytes  app_key     = 7 [(gogoproto.customtype) = "github.com/TheThingsNetwork/ttn/core/types.AppKey"];
  uint32 f_cnt_up    = 8;
  uint32 f_cnt_down  = 9;

  // Options
  bool   disable_f_cnt_check = 11;
  bool   uses32_bit_f_cnt    = 12;
}

service DeviceManager {
  rpc GetDevice(DeviceIdentifier) returns (Device);
  rpc SetDevice(Device) returns (api.Ack);
  rpc DeleteDevice(DeviceIdentifier) returns (api.Ack);
}
